include_directories(${LeetCode_SOURCE_DIR}/include)

add_library(Solutions
	TwoSum.cpp
	FindDuplicate.cpp
	MedianFinder.cpp
	MoveZeroes.cpp
	UglyNumber.cpp
	UglyNumber2.cpp
	MissingNumber.cpp
	AddDigits.cpp
	NimGame.cpp
	WordPattern.cpp
	ValidAnagram.cpp
	PowerOfThree.cpp
	BinaryTreePaths.cpp
	RemoveDuplicateLetters.cpp
	SameTree.cpp
	InvertBinaryTree.cpp
	DeleteNode.cpp
	LowestCommonAncestor.cpp
	PowerOfTwo.cpp
	MergeTwoLists.cpp
	)
